# Pocket-Pi

./: .env.example  .gitignore  AGENT.md  README.md  explore.sh  explorer.py  generate_banner.py  generate_future_image.py  pyproject.toml  session_explorer.html  update_explorer.py
Training/: 01_pocketflow_basics.md  02_configuration_manager.md  03_tree_session_manager.md  04_unified_tool_suite.md  05_agent_nodes_orchestration.md  06_wiring_and_running.md  README.md
Training/Abstractions/: 00_index.md  01_shared_state_shared_.md  02_workflow_node_node_.md  03_state_machine_workflow_flow_.md  04_tree_based_session_manager_sessionmanager_.md  05_fuzzy_matching_line_editor_edit_.md  06_security_gatekeeper_human_in_the_loop_permissions_.md  07_semantic_context_compactor_compactnode_.md  08_prefix_prompt_cache_optimizer_utils_py_caching_.md
Training/tutorial_agent_features/: 00_index.md  01_uv_based_bootstrapping.md  02_pocketflow_state_machine_framework.md  03_shared_state_context_store_.md  04_workflow_node.md  05_configmanager_hierarchical_configuration_.md  06_tree_based_session_manager.md  07_slash_command_system.md  08_plannernode_llm_reasoner_.md  09_executornode_tool_runner_.md  10_unified_tool_system.md  11_fuzzy_matching_line_editor_edit_.md  12_in_node_router_pattern.md  13_security_gatekeeper_human_in_the_loop_permissions_.md  14_project_trust_boundary.md
docs/: architecture.md  index.md  logging.md  permissions.md  skills.md
pocket_pi/: __init__.py  config.py  main.py  session.py
pocket_pi/tools/: __init__.py  bash.py  edit.py  read.py  search.py  (+1 more)
(+5 files in other folders)
